# recipe_generator

./: pyproject.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
recipe-backend/: Dockerfile  auth.py  crud.py  database.py  main.py  models.py  schemas.py
recipe-frontend/: Dockerfile  package-lock.json  package.json
recipe-frontend/src/: App.js  api.js  auth.js
recipe-frontend/src/pages/: Login.js  Recipes.js  Register.js
